samples/_failures_safe/1761138468_4a9dd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_580dd84e.c: In function ‘main’:
./samples/SAFE/__tmp_580dd84e.c:140:54: error: ‘G’ undeclared (first use in this function)
  140 |     int num_operations = sizeof(operations) / sizeof(G
      |                                                      ^
./samples/SAFE/__tmp_580dd84e.c:140:54: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_580dd84e.c:140:55: error: expected ‘)’ at end of input
  140 |     int num_operations = sizeof(operations) / sizeof(G
      |                                                     ~ ^
      |                                                       )
./samples/SAFE/__tmp_580dd84e.c:140:5: error: expected declaration or statement at end of input
  140 |     int num_operations = sizeof(operations) / sizeof(G
      |     ^~~
